--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -77,6 +77,9 @@
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                    </div>
 
                 </div>
 
@@ -108,6 +111,9 @@
                         </div>
                         <a class="prev" onclick="plusSlide2(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlide2(1)">&#10095;</a>
+                    </div>
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide2(1)"></span>
                     </div>
 
                 </div>
@@ -212,7 +218,9 @@
                         <a class="prev" onclick="plusSlide4(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlide4(1)">&#10095;</a>
                     </div>
-
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide4(1)"></span>
+                    </div>
 
                 </div>
                 <!-- Saturn -->
@@ -270,6 +278,9 @@
                         </div>
                         <a class="prev" onclick="plusSlide7(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlide7(1)">&#10095;</a>
+                    </div>
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide7(1)"></span>
                     </div>
 
                 </div>
