--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -346,7 +346,7 @@
             dots[i].className = dots[i].className.replace(" active", "");
         }
         slides[slideIndex - 1].style.display = "block";
-        dots[slideIndex - 1].className += " active";
+        // dots[slideIndex - 1].className += " active";
     }
 </script>
 
@@ -381,7 +381,7 @@
             dots[i].className = dots[i].className.replace(" active", "");
         }
         slides[slideIndex2 - 1].style.display = "block";
-        dots[slideIndex2 - 1].className += " active";
+        // dots[slideIndex2 - 1].className += " active";
     }
 </script>
 <script>
@@ -415,7 +415,7 @@
             dots[i].className = dots[i].className.replace(" active", "");
         }
         slides[slideIndex4 - 1].style.display = "block";
-        dots[slideIndex4 - 1].className += " active";
+        // dots[slideIndex4 - 1].className += " active";
     }
 </script>
 
@@ -451,7 +451,7 @@
             dots[i].className = dots[i].className.replace(" active", "");
         }
         slides[slideIndex7 - 1].style.display = "block";
-        dots[slideIndex7 - 1].className += " active";
+        // dots[slideIndex7 - 1].className += " active";
     }
 </script>
 
