--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
         <!-- หน้าก่อนเข้าหน้า Home -->
         <div v-if="what_page == 'Before_Home'">
             <img src="Architecture/Page_before entering_home page/logo.gif"
-                style="width: 90%; height: 95vh; margin-left: 5%; margin-right: 5%;">
+                style="width: 70%; height: 95vh; margin-left: 15%; margin-right: 15%;">
         </div>
         <!-- หน้าก่อนเข้าหน้า Home -->
 
