--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -115,7 +115,7 @@
         <!-- หน้า Contact -->
         <div v-if="what_page == 'Contact'" class="container">
             <div class="row">
-                <div data-aos="fade-right" class="col-5 contact">
+                <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact">
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
@@ -137,7 +137,7 @@
                         <p>{{info.Contact[contact_mean].Web}}</p>
                     </div>
                 </div>
-                <div data-aos="fade-left" class="col-7">
+                <div data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" class="col-7">
                     <iframe v-if="contact_mean == 0"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
