--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -459,16 +459,17 @@
                     </div>
 
                 </div>
+
             </div>
+
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
-        </div>
-
-        <div class="menu">
 
         </div>
 
+        <div class="swiper-pagination"></div>
     </div>
+
 </body>
 
 
@@ -503,6 +504,13 @@
         navigation: {
             nextEl: '.swiper-button-next',
             prevEl: '.swiper-button-prev',
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+            renderBullet: function(index, className) {
+                return '<span class="' + className + '">' + '<img class="imgicon" src="image/' + index + '.png"></img>' + '</span>';
+            },
         },
     });
 </script>
